<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">西华易导航</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="login_out">退出登录</string>
    <string name="register">注册</string>
    <string name="zy">主页</string>
    <string name="xx">消息</string>
    <string name="wd">我的</string>
    <string name="title_activity_fragment1">Fragment1</string>
    <string name="title_activity_fragment2">Fragment2</string>
    <string name="title_activity_fragment3">Fragment3</string>
    <string name="login_label_username">账号</string>
    <string name="login_label_password">密码</string>
    <string name="login_username_hint">请输入手机号</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_register_link">没有帐号？ <a href="#" mce_href="#">注册</a></string>
    <string name="visit"><a href="#" mce_href="#">进去看看</a></string>
    <string name="register_label_username">账号</string>
    <string name="register_label_confirm_password">确认密码</string>
    <string name="register_label_signin">注册</string>
    <string name="dingwei">定位</string>
    <string name="lixian">离线地图</string>
    <string name="fujin">附近</string>
    <string name="daohang">导航</string>
    <string name="poi_search">搜地点</string>
    <string name="zhengchang">正常图</string>
    <string name="weixing">卫星图</string>
    <string name="jiaotong">交通图</string>
    <string name="reli">热力图</string>
    <string name="input_city">输入城市</string>
    <string name="search">搜索</string>
    <string name="city_list">城市列表</string>
    <string name="download">下载管理</string>
    <string name="hasdownload">已下载城市</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="delete">删除</string>
    <string name="hot_city">热门城市</string>
    <string name="country">全国</string>
    <string name="download_city">已下载城市</string>
    <string name="number">131</string>
    <string name="see">查看</string>
    <string name="pause">暂停</string>
    <string name="jcss">驾车搜索</string>
    <string name="gjss">公交搜索</string>
    <string name="bxss">步行搜索</string>
    <string name="wdwz">我的位置</string>
    <string name="qd">起点：</string>
    <string name="zd">终点：</string>
    <string name="input_zd">请输入终点</string>
    <string name="route_detail">路线详情</string>
    <string name="collect">收藏</string>
    <string name="forward">转发</string>
 	<string name="cacel_collect">取消收藏</string>
 	<string name="app_share">分享</string>
 	<string name="app_cancel">取消</string>
    <style name="normalText" parent="@android:style/TextAppearance">
        <item name="android:textColor">#4A4A4A</item>
        <item name="android:textSize">14sp</item>
    </style>

    <string name="title_activity_show_message">ShowMessage</string>
    <string name="title_activity_show_collect">ShowCollect</string>

</resources>