<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   
    
      <LinearLayout
        android:id="@+id/city_list"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="clickCityListButton"
            android:text="@string/city_list" 
            android:textSize="20sp"/>

        <Button
            android:id="@+id/ddButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="clickLocalMapListButton"
            android:text="@string/download"
             android:textSize="20sp" />
    </LinearLayout>

    

  

    <LinearLayout
        android:id="@+id/citylist_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/cityid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/number"
             />
        <!-- 隐藏输入法用 -->

       

        <EditText
            android:id="@+id/input_city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_city"/>

        <Button
            android:id="@+id/search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/button_style"
            android:onClick="search"
            android:text="@string/search" />

        
    </LinearLayout>
    
         <LinearLayout
        android:id="@+id/off_line"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:orientation="horizontal" 
        android:visibility="invisible"
        >

        <TextView
            android:id="@+id/state"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hasdownload" />

        <Button
            android:id="@+id/start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/button_style"
            android:onClick="start"
            android:gravity="center"
            android:text="@string/start" />

       <!--  <Button
            android:id="@+id/stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="stop"
            android:text="@string/stop" />

        <Button
            android:id="@+id/del"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="remove"
            android:text="@string/delete" /> -->
    </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot_city" />

        <ListView
            android:id="@+id/hotcity_list"
            android:layout_width="fill_parent"
            android:layout_height="200dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/country" />

        <ListView
            android:id="@+id/allcity_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/localmap_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_city" />

        <ListView
            android:id="@+id/localmap_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>