<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.baidu.mapapi.map.MapView
        android:id="@+id/lmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" 
        android:layout_marginTop="20dp"
        >

        <AutoCompleteTextView
            android:id="@+id/poi_search"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/poi_search_bg"
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/poi_search"
             >
        </AutoCompleteTextView>

        <Button
            android:id="@+id/button6"
           android:background="@drawable/button_style"
            android:layout_marginLeft="15dp"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:onClick="poiSearch"
            android:text="@string/search" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="62dp"
            android:background="#6495ED"
            android:text="@string/zhengchang" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button2"
            android:layout_marginTop="17dp"
            android:background="#6495ED"
            android:text="@string/weixing" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button3"
            android:layout_marginTop="14dp"
            android:background="#6495ED"
            android:text="@string/jiaotong" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button4"
            android:layout_marginTop="15dp"
            android:background="#6495ED"
            android:text="@string/reli" />
    </RelativeLayout>

</RelativeLayout>