<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/register_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >

        <!-- 账号 -->

        <TextView
            android:id="@+id/register_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username" />
        <!-- hint 未输入时提示 -->

        <EditText
            android:id="@+id/register_username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_user_input"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true" 
            android:maxLength="11"
            android:digits="0123456789"/>
        <!-- 密码 -->

        <TextView
            android:id="@+id/register_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_username_edit"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/register_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_input"
            android:inputType="textPassword"
            android:singleLine="true" 
            android:maxLength="16"/>
        <!-- 确认密码 -->

        <TextView
            android:id="@+id/register_confirm_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_edit"
            android:layout_marginTop="3dp"
            android:text="@string/register_label_confirm_password" />

        <EditText
            android:id="@+id/register_confirm_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_confirm_password_input"
            android:inputType="textPassword"
            android:singleLine="true" 
            android:maxLength="16"/>
        <!-- 注册 -->

        <Button
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_confirm_password_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_bg"
            android:text="@string/register_label_signin" />
    </RelativeLayout>

</LinearLayout>