<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5" >
    </android.support.v4.view.ViewPager>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#FFFFFF"
        android:baselineAligned="false" >

        <RelativeLayout
            android:id="@+id/zhuye_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/zhuye_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_1_n" >
                </ImageView>

                <TextView
                    android:id="@+id/zhuye_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/zy"
                    android:textColor="#666666"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/xiaoxi_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/xiaoxi_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_2_n" >
                </ImageView>

                <TextView
                    android:id="@+id/xiaoxi_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/xx"
                    android:textColor="#666666"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wode_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/wode_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_3_n" >
                </ImageView>

                <TextView
                    android:id="@+id/wode_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wd"
                    android:textColor="#666666"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>